--- a/Projeto OS/STYLE/Cadastros/CadastroClientes.css
+++ b/Projeto OS/STYLE/Cadastros/CadastroClientes.css
@@ -176,10 +176,7 @@ thead > tr{
 
 }
 
-tbody > tr:nth-child(2n){
-    background: #cacaca3d;
-    
-}
+
 tbody > tr{
     height: 4ch;
 }
@@ -187,7 +184,12 @@ td,  th{
     padding: 1ch;
     border-left: 0.1ch solid #cacaca;
     border-bottom: 0.1ch solid #cacaca;
+    cursor: pointer;
 
+}
+tr:hover
+{
+    background:#cacaca3b ;
 }
 
 .AcaoBtn{
