--- a/Projeto OS/STYLE/TelaDoAdm.css
+++ b/Projeto OS/STYLE/TelaDoAdm.css
@@ -251,7 +251,7 @@ section.principal {
 
 .hospedagens {
     width: 100%;
-    height: 135vh;
+    height: 100%;
     display:flex ;
     flex-direction: row;
     justify-content: center;
@@ -268,7 +268,7 @@ section.principal {
     justify-content: center;
 }
 
-.optionhospedagens::-webkit-scrollbar{
+.hospedagens::-webkit-scrollbar{
     background-color: transparent;
 }
 
