--- a/Projeto OS/projeto/Clientes.css
+++ b/Projeto OS/projeto/Clientes.css
@@ -1,21 +1,10 @@
 
-* {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
-.monstro {
-    
-    background: linear-gradient(45deg, #eff1f3, #eff1f3);
-    background-repeat: no-repeat;
-    min-height: 100vh;
-    min-width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+.ModalAddClientes{
+    background-color: rgb(247, 0, 0);
+    width: 100%;
+    height: 100%;
 }
 
 main.container {
@@ -24,14 +13,7 @@ main.container {
     position: absolute;
     top: 50%;
     left: 50%;
-   
-    min-height: 40vh;
-    transform: translate(-50%,-50%);
-    background-color: #225A76;
-  
-    border-radius: 5px;
-    min-width: 320px;
-    padding: 2rem;
+
 }
 
 main h2 {
