--- a/Projeto OS/STYLE/Cadastros/CadastroClientes.css
+++ b/Projeto OS/STYLE/Cadastros/CadastroClientes.css
@@ -233,6 +233,7 @@ tr:hover
     display: flex;
     justify-content: space-between;
     color: #59cbe8;
+    width: 80%;
 
 }
 .cabecalhoAddClientes button{
@@ -251,11 +252,20 @@ flex-direction: column;
 align-items: center;
 width: 30%;
 height: 80%;
+justify-content: center;
 }
+
+.ModalAddClientes::-webkit-scrollbar{
+   background-color: transparent;   
+ }
+
 .container{
-    width: 50%;
-    height: 50%;
+    width: 80%;
+    height: 80%;
 }
+
+
+
 
 .inputBox{
     position: relative;
