--- a/Projeto OS/STYLE/Cadastros/CadastroClientes.css
+++ b/Projeto OS/STYLE/Cadastros/CadastroClientes.css
@@ -246,7 +246,7 @@ tr:hover
 .ModalAddClientes{
     overflow-y: auto;
     padding: 0.5ch;
-background-color: white;
+background-color: #f4f8f9;
 display: flex;
 flex-direction: column;
 align-items: center;
