--- a/Projeto OS/projeto/reservas.css
+++ b/Projeto OS/projeto/reservas.css
@@ -10,9 +10,10 @@
     transform: translate(-50%,-50%);
     background-color: rgba(0, 0, 0, 0.226);
     border-radius: 5px;
-    padding: 2rem;
     justify-content: center;
     align-items: center;
+    padding: 7rem;
+
 }
 .formReservas{
     width: 100%;
@@ -92,6 +93,10 @@ form {
     left: 0px;
     pointer-events: none;
     transition: .5s;
+    
+}
+b{
+    color: #59cbe8;
 }
 
 .inputUser:focus ~ .labelInput,
@@ -144,12 +149,12 @@ form input[type="submit"]:hover {
 }
 #submit,
 .inputUser[type="button"] {
-    border-bottom: 1px solid rgb(0, 0, 0);
+    border-bottom: 1px solid #cacaca;
     margin: 0;
     padding: 0.4rem;
-    background:#f4f8f9;
+    background:#59cbe8;
     cursor: pointer;
-    color: #59cbe8;
+    color: #f4f8f9;
     font-size: 0.9rem;
     font-weight: 300;
     border-radius: 4px;
