--- a/Projeto OS/STYLE/TelaDoAdm.css
+++ b/Projeto OS/STYLE/TelaDoAdm.css
@@ -253,7 +253,7 @@ section.principal {
     width: 100%;
     height: 100%;
     display:flex ;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: start;
     background-color: #eff1f3;
