--- a/Projeto OS/STYLE/Quartos.css
+++ b/Projeto OS/STYLE/Quartos.css
@@ -6,7 +6,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.monstro {
+.ModalQuartos {
     
     background: linear-gradient(45deg, #eff1f3, #eff1f3);
     background-repeat: no-repeat;
