--- a/Projeto OS/STYLE/reservas.css
+++ b/Projeto OS/STYLE/reservas.css
@@ -1,18 +1,6 @@
 
 
-.ModalCadastroReservas {
-    display: none;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background-color: rgba(0, 0, 0, 0.226);
-    border-radius: 5px;
-    justify-content: center;
-    align-items: center;
-    padding: 7rem;
+.ModalAddClientes{
 
 }
 .formReservas{
